0.08006 2009-12-15
    - Ported from Net::Twitter:
      - netrc/netrc_machine changes from Net::Twitter
      - trends_available/trends_location API methods
      - documented lat/long parameters to update
      - added users_search/find_people API method
      - updated apiurl default to http://api.twitter.com/1
    - Fixed: retweeted_{to,of}_me API URLs (RT#52784)

0.08005 2009-11-02
    - Return user_id and screen_name from request_access token (ported from Net::Twitter)

0.08004 2009-10-22
    - Fixed: cached request_token resulted in stale authentication/autorization urls
    - Added better runtime error message when SSL support is missing

0.08003 2009-10-13
    - Added new API method: report_spam

0.08002 2009-10-12
    - ported support for multipart/from-data posts, used by update_profile_image and
      update_profile_background_image, from Net::Twitter
    - Improved error message when Net::OAuth is not install or version is inadequate
    - Changed nonce generation to remove dependency on Digest::SHA
    - Doc patch: created_at, not time (thanks to Blair Christensen RT#50313)

0.08001 2009-09-10
    - URI 1.35 causes utf8 encoding problems; require 1.40 (thanks to Dan Boger, @zigdon)
    - Removed deprecated is_authorized from examples in pod (thanks to Nigel Metheringham)

0.08000 2009-08-27
    - Ported get_authentication_url from Net::Twitter
    - Work around perl bug requiring encoded hash keys when client uses "use utf8"

0.07000 2009-08-14
    - Removed JSON::DWIW as a handler (no support for JSON::Any's utf8 option)

0.06002 2009-07-29
    - Fix: spurious OAuth signature failures (ported from Net::Twitter)

0.06001 2009-07-28
    - Fix: OAuth / unicode conflict

0.06000 2009-07-28
    - Bug fix: OAuth signatures on POST requests (Galen Huntington)
    - Unicode fixes

0.05000 2009-07-09
    - Added ssl and netrc arguments to new

0.04001 2009-07-07
    - Added documentation for the required callback param to
      get_authorization_url