@@ -2,25 +2,36 @@
 use warnings;
 use strict;
 use Try::Tiny;
-use Test::More tests => 4;
+use Test::More tests => 9;
 use Encode qw/decode encode_utf8 decode_utf8/;
 use Net::Twitter::Lite;
 
 eval "use LWP::UserAgent 5.819";
 plan skip_all => 'LWP::UserAgent >= 5.819 required' if $@;
 
-my $nt = Net::Twitter::Lite->new(
-    consumer_key    => 'key',
-    consumer_secret => 'secret',
-);
-$nt->access_token('token');
-$nt->access_token_secret('secret');
-
 my $req;
-$nt->{ua}->add_handler(request_send => sub {
+my $ua = LWP::UserAgent->new;
+$ua->add_handler(request_send => sub {
     $req = shift;
     return HTTP::Response->new(200);
 });
+
+sub raw_sent_status {
+    my $uri = URI->new;
+    $uri->query($req->content);
+    my %params = $uri->query_form;
+    return $params{status};
+}
+
+sub sent_status { decode_utf8 raw_sent_status() }
+
+my $nt = Net::Twitter::Lite->new(
+    consumer_key    => 'key',
+    consumer_secret => 'secret',
+    ua              => $ua,
+);
+$nt->access_token('token');
+$nt->access_token_secret('secret');
 
 # "Hello world!" in traditional Chinese if Google translate is correct
 my $status = "\x{4E16}\x{754C}\x{60A8}\x{597D}\x{FF01}";
@@ -29,13 +40,15 @@ ok utf8::is_utf8($status), 'status parameter is decoded';
 
 try { $nt->update($status) };
 
-my $uri = URI->new;
-$uri->query($req->content);
+is sent_status(), $status, 'sent status matches update parameter';
 
-my %params = $uri->query_form;
-my $sent_status = decode_utf8 $params{status};
+# ISO-8859-1
+my $latin1 = "\xabHello, world\xbb";
 
-is $sent_status, $status, 'sent status matches update parameter';
+ok !utf8::is_utf8($latin1), "latin-1 string is not utf8 internally";
+try { $nt->update($latin1) };
+is sent_status(), $latin1, "latin-1 matches";
+ok !utf8::is_utf8($latin1), "latin-1 not promoted to utf8";
 
 ### Net::Twitter expects decoded characters, not encoded bytes
 ### So, sending encoded utf8 to Net::Twitter will result in double
@@ -47,10 +60,24 @@ SKIP: {
 
     try { $nt->update(encode_utf8 $status) };
 
-    $uri = URI->new;
-    $uri->query($req->content);
-    %params = $uri->query_form;
+    my $bytes = raw_sent_status();
 
-    isnt $params{status}, encode_utf8($status), "encoded status does not match";
-    is   decode('utf-8-de', $params{status}), $status, "double encoded";
+    isnt $bytes, encode_utf8($status), "encoded status does not match";
+    is   decode('utf-8-de', $bytes), $status, "double encoded";
 };
+
+############################################################
+# Basic Auth
+############################################################
+
+$nt = Net::Twitter::Lite->new(
+    username => 'fred',
+    password => 'pebbles',
+    ua       => $ua,
+);
+
+try { $nt->update($status) };
+is sent_status(), $status, 'basic auth';
+
+try { $nt->update($latin1) };
+is sent_status(), $latin1, 'latin-1 basic auth';
