@@ -1,3 +1,5 @@
+    - Fixed: utf8 encoding error for latin1 using Basic Authentication (ported from Net::Twitter)
+
 0.08006 2009-12-15
     - Ported from Net::Twitter:
       - netrc/netrc_machine changes from Net::Twitter
